force-app/main/default/objects/Advance__c/fields/Deal_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Expiration_Date__c</fullName>
    <formula>Deal__r.Modified_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Expiration Date</label>
    <type>Date</type>
</CustomField>