force-app/main/default/objects/Advance__c/fields/Exception_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approval_Date__c</fullName>
    <label>Exception Approval Date</label>
    <type>Date</type>
</CustomField>