force-app/main/default/objects/Advance__c/fields/Is_Undewriter__c.field-meta.xml
<CustomField>
    <fullName>Is_Undewriter__c</fullName>
    <description>This will equal true if the Underwriter if the same person as current User</description>
    <formula>$User.Id = Underwriter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will equal true if the Underwriter if the same person as current User</inlineHelpText>
    <label>Is Undewriter</label>
    <type>Checkbox</type>
</CustomField>