force-app/main/default/objects/Advance__c/fields/Maturity_Date_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date_Calculation_Type__c</fullName>
    <formula>TEXT( Deal__r.Maturity_Date_Calculation_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Date Calculation Type</label>
    <type>Text</type>
</CustomField>