force-app/main/default/objects/Advance__c/fields/Renovation_Budget_Total__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Budget_Total__c</fullName>
    <label>Renovation Budget Total</label>
    <summarizedField>Property_Advance__c.Renovation_Budget__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>